syntax = "proto3";

option csharp_namespace = "AuthService";

service GrpcUsers {
    rpc GetAllUsers (GetAllRequest) returns (GetAllResponse);
}

message GetAllRequest {}

message GrpcUserModel {
    int32 userId = 1;
    string publicId = 2;
}

message GetAllResponse {
    repeated GrpcUserModel users = 1;
}
